# SocialAwareNavigation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  novnc.env  ros.env
Docker/: Dockerfile  README.md  docker-compose.yml
Workspace/: README.md  devel.catkin
Workspace/src/neobotix_mp_655/neo_2dnav/: package.xml
Workspace/src/neobotix_mp_655/neo_2dnav/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  costmap_local_sim.yaml  planner_global_base.yaml  planner_local_std.yaml  planner_local_teb.yaml  sensors.yaml
Workspace/src/neobotix_mp_655/neo_2dnav/config/mir/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_global_params_non_social.yaml  costmap_local_params.yaml  move_base_common_params.yaml  planner_global_base.yaml  planner_local_teb_mir.yaml  planner_local_teb_mir_non_social.yaml
Workspace/src/neobotix_mp_655/neo_2dnav/config/slam/: karto_mapper_params.yaml
Workspace/src/neobotix_mp_655/neo_2dnav/launch/: 2dnav.launch  amcl_diff.launch  mason_nav.launch  mason_nav_mir.launch  mir.launch  nav2dslam.launch  neo_gmapping.launch  neo_karto.launch
Workspace/src/neobotix_mp_655/neo_2dnav/launch/mir/: mason_nav_mir.launch  mir_bridge.py
Workspace/src/neobotix_mp_655/neo_2dnav/maps/: fib14labmirrecording.yaml
Workspace/src/neobotix_mp_655/neo_2dnav/rviz/: MASON.rviz  neo_gmapping.rviz  neo_navigation.rviz
Workspace/src/neobotix_mp_655/neo_msgs/: CMakeLists.txt  package.xml
Workspace/src/neobotix_mp_655/neo_relayboard/: CHANGELOG.rst  CMakeLists.txt  package.xml
Workspace/src/neobotix_mp_655/neo_relayboard/common/include/: SerRelayBoard.h  SerialIO.h  neo_relayboard_node.h
Workspace/src/neobotix_mp_655/neo_relayboard/common/src/: SerialIO.cpp  StrUtil.cpp
Workspace/src/neobotix_mp_655/neo_relayboard/src/: neo_relayboard_node.cpp
Workspace/src/neobotix_stack/neo_navigation/neo_bringup/: CMakeLists.txtcom.dropbox.attrs  package.xml  package.xmlcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_bringup/config/: platform_ctrl.yamlcom.dropbox.attrs  serrelay.yamlcom.dropbox.attrs  serrelay_drive1.yamlcom.dropbox.attrs  serrelay_drive2.yamlcom.dropbox.attrs  sick.yaml  sick.yamlcom.dropbox.attrs  sick_back.yaml  sick_back.yamlcom.dropbox.attrs  sick_front.yamlcom.dropbox.attrs  unify_scans.yamlcom.dropbox.attrs  us.yaml  us.yamlcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_bringup/config/serrelay/: mp_500_2_1.yaml  mp_500_2_1.yamlcom.dropbox.attrs  mp_500_2_1_drive1.yamlcom.dropbox.attrs  mp_500_2_1_drive2.yamlcom.dropbox.attrs  neo-aal.yamlcom.dropbox.attrs  neo-aal_drive1.yamlcom.dropbox.attrs  neo-aal_drive2.yamlcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_bringup/config/serrelay/us/: mp_500_2_1.yaml  mp_500_2_1.yamlcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_bringup/config/sick/: mp_500_2_1.yamlcom.dropbox.attrs  neo-aal.yamlcom.dropbox.attrs  sick_back_cph.yamlcom.dropbox.attrs  sick_front_cph.yaml  sick_front_cph.yamlcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_bringup/config/teleop/: mp_500_2_1.yaml  mp_500_2_1.yamlcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_bringup/launch/: bringup_mp_655.launchcom.dropbox.attrs  bringup_mp_655_remote.launchcom.dropbox.attrs  platformCtrl.launchcom.dropbox.attrs  relayboard.launchcom.dropbox.attrs  sick_s300.launchcom.dropbox.attrs  srb_drives.launchcom.dropbox.attrs  srb_tf_us.launch  srb_tf_us.launchcom.dropbox.attrs  srb_us.launch  srb_us.launchcom.dropbox.attrs  unify_scans.launch  unify_scans.launchcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_bringup/maps/: map_melEmpty.pgm  map_melEmpty.pgmcom.dropbox.attrs  map_melEmpty.yaml  map_melEmpty.yamlcom.dropbox.attrs  map_narrowHallway.pgm  map_narrowHallway.pgmcom.dropbox.attrs  map_narrowHallway.yaml  map_narrowHallway.yamlcom.dropbox.attrs  map_narrowHallway3.2.pgm  map_narrowHallway3.2.pgmcom.dropbox.attrs  map_narrowHallway3.2.yaml  map_narrowHallway3.2.yamlcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_description/: CMakeLists.txtcom.dropbox.attrs  package.xml  package.xmlcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_description/calibration/: neo-aal_cal.xacrocom.dropbox.attrs  neo-cph_cal.xacro  neo-cph_cal.xacrocom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_description/launch/: neobotix.launchcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_description/meshes/neo_mp655/: neobotix_mp655.daecom.dropbox.attrs  neobotix_mp655.skp  neobotix_mp655.skpcom.dropbox.attrs  sick_s300.dae  sick_s300.daecom.dropbox.attrs  sick_s300.skpcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_description/robots/: neobotix_base.pdfcom.dropbox.attrs  neobotix_base.urdf.xacrocom.dropbox.attrs  neobotix_base.urdfcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_description/rviz/: neobotix.rvizcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_description/urdf/: gazebo.urdf.xacrocom.dropbox.attrs  neobotix_mp655.urdf.xacro  neobotix_mp655.urdf.xacrocom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_description/urdf/common/: gazebo_sensors.xmlcom.dropbox.attrs  materials.xmlcom.dropbox.attrs  sick_s300_laser.gazebo.xacro  sick_s300_laser.gazebo.xacrocom.dropbox.attrs  sick_s300_laser.urdf.xacro  sick_s300_laser.urdf.xacrocom.dropbox.attrs  util_defs.xacro  util_defs.xacrocom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_platformctrl_diff/: CHANGELOG.rst  CHANGELOG.rstcom.dropbox.attrs  CMakeLists.txt  CMakeLists.txtcom.dropbox.attrs  package.xml  package.xmlcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_platformctrl_diff/common/src/: DiffDrive2WKinematics.cpp  DiffDrive2WKinematics.cppcom.dropbox.attrs
Workspace/src/neobotix_stack/neo_navigation/neo_platformctrl_diff/ros/src/: neo_platformctrl_node.cppcom.dropbox.attrs
YOLOv4/: tfYOLO.py  (+1 more)
(+791 files in other folders)
