<?xml version="1.0"?>
<package>
  <name>neo_2dnav</name>
  <version>0.0.1</version>
  <description>Setup files for navigation on the Neobotix MP-655 platform</description>

  <maintainer email="sb@mp.aau.dk">Simon Bøgh</maintainer>
  <maintainer email="cs@mp.aau.dk">Casper Schou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gmapping</build_depend>
  <build_depend>slam_karto</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>neo_bringup</build_depend>

  <run_depend>gmapping</run_depend>
  <run_depend>slam_karto</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>neo_bringup</run_depend>

  <export>
  </export>

</package>
