<?xml version="1.0"?>
<package>
  <name>neo_msgs</name>
  <version>0.1.2</version>
  <description>
	This package contains copies of former pr2_msgs (ported to ROS indigo) 
	as well as new messages for neobotix robots.
  </description>

  <maintainer email="nieland@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <url type="website">http://www.neobotix-robots.com</url>

  <author>Timo Hackel</author>
  <author>Eric Berger and many others</author>
  <author>Austin Hendrix</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
