<?xml version="1.0"?>
<package>
  <name>neo_bringup</name>
  <version>1.0.0</version>
  <description>Launch and config files for the neobotix base on Little Helper</description>
  <maintainer email="sb@mp.aau.dk">Simon Bøgh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>neo_relayboard</run_depend>
  <run_depend>cob_sick_s300</run_depend>
  <run_depend>cob_scan_unifier</run_depend>
  <run_depend>neo_platformctrl_diff</run_depend>
  <run_depend>robot_state_publisher</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
